test initial commit

--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ description: Zane Gyorko
 navbar-links:
   Photos: "photography"
   Projects:
+    - Page one: ""
     - Learn markdown: "http://www.markdowntutorial.com/"
     - GitHub Pages: "https://pages.github.com/"
     About Me: "aboutme"
@@ -153,7 +154,7 @@ title-separator: "-"
 # --- Don't need to touch anything below here (but you can if you want) --- #
 
 # Output options (more information on Jekyll's site)
-timezone: "America/NewYork"
+timezone: "America/Vancouver"
 markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
