--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: Zane Gyorko
 navbar-links:
   Photos: "photography"
   Projects:
-    - SSDC: "http://www.smallsat.club"
+    - SSDC: "http://www.smallsat.club/"
     - Learn markdown: "http://www.markdowntutorial.com/"
     - GitHub Pages: "https://pages.github.com/"
     About Me: "aboutme"
