--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ navbar-links:
   Photos: "photography"
   Projects:
     - SSDC: "http://www.smallsat.club/"
-    - Learn markdown: "http://www.markdowntutorial.com/"
+    - AR XA Rebuild: "pages/2019-02-28-AR-XA-Rebuild"
     - GitHub Pages: "https://pages.github.com/"
   About Me: "aboutme"
 
