--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ navbar-links:
   Photos: "photography"
   Projects:
     - SSDC: "http://www.smallsat.club/"
-    - AR XA Rebuild: "xarebuild"
+    - AR XA Rebuild: "2018-02-28-AR-XA-Rebuild"
     - GitHub Pages: "https://pages.github.com/"
   About Me: "aboutme"
 
