--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: Zane Gyorko
 navbar-links:
   Photos: "photography"
   Projects:
-    - SSDC: "http://www.ufsmallsat.club/"
+    - SSDC: "https://ufsmallsat.club"
     - AR XA Rebuild: "arxa"
     - Old Apple Computers: "apple"
   About Me: "aboutme"
