Fixed SSDC Link

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: Zane Gyorko
 navbar-links:
   Photos: "photography"
   Projects:
-    - SSDC: "https://ufsmallsat.club"
+    - SSDC: "https://mae.ufl.edu/academics/organizations/ssdc/"
     - AR XA Rebuild: "arxa"
     - Old Apple Computers: "apple"
   About Me: "aboutme"
@@ -71,7 +71,7 @@ author:
 # You can reorder the items to define the link order.
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
-  rss: true
+#  rss: true
   github: ZaneAG
   twitter: zgyorko
 #  reddit: yourname
